--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ django-material-admin==1.5.6
 celery==4.3.0
 django-cleanup==4.0.0
 redis==3.3.11
+djangorestframework==3.10.3
+djangorestframework-jwt==1.11.0
