User registration/authentication.

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ django-cleanup==4.0.0
 redis==3.3.11
 djangorestframework==3.10.3
 djangorestframework-jwt==1.11.0
+drf-yasg==1.17.0
+django-rest-auth==0.9.5
+django-allauth==0.40.0
