--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,5 @@ djangorestframework-jwt==1.11.0
 drf-yasg==1.17.0
 django-rest-auth==0.9.5
 django-allauth==0.40.0
+channels==2.3.1
+channels-redis==2.4.1
